# Fight-On

./: .gitignore  README.md  main.py  pyproject.toml  reservedWordsAndSymbols.json  test.txt
_Docs&Installer/: installerLink.txt
assets/: FightOn.ui  ui_FightOn.py
fight_on/: cfg_lark.txt  fightOn.py  fightOn_lexer.py  fightOn_parser.py
