[tool.poetry]
name = "fight_on"
version = "0.1.0"
description = ""
authors = ["chraem <calumbiranc@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySide2 = "^5.15.2"
lark = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
